<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_teams"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_teams"/>
    
    <item
        android:id="@+id/action_players"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_players"/>
    <item
        android:id="@+id/action_photo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_photo"/>
    <item
        android:id="@+id/action_video"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_video"/>
    <item
        android:id="@+id/action_news"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_news"/>
    <item
        android:id="@+id/action_stats"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_stats"/>
    <item
        android:id="@+id/action_standings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_standings"/>    

</menu>
