<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"    
    android:orientation="vertical"
    android:padding="5dip" >

    <!-- android:background="@drawable/list_selector"  -->
    <ImageView
        android:id="@+id/list_image"
        android:layout_width="75dip"
        android:layout_height="75dip"
        android:layout_gravity="top"
        android:contentDescription="@string/title_activity_players"
        android:src="@drawable/p1" />   

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dip"
        android:paddingBottom="9dip"
        android:text="@string/strName"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        />
      
    <TextView
         android:id="@+id/tvPosition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/tvTeam"
         android:layout_alignLeft="@+id/tvName"
         android:text="@string/strPosition"
         android:textColor="@android:color/white"
         android:textSize="15sp" />
    

     <TextView
         android:id="@+id/tvTeam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/list_image"
         android:layout_alignLeft="@+id/tvName"
         android:textColor="@android:color/white"
         android:text="@string/strTeam"
         android:textSize="15sp" />

     <TextView
         android:id="@+id/tvId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/tvTeam"
         android:layout_alignParentRight="true"
         android:text="@string/strId"
         android:textColor="@android:color/white"
         android:textSize="35sp" />

</RelativeLayout>